# fasqla

./: .dockerignore  .pre-commit-config.yaml  Dockerfile_app  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 41613b388bee_initial_revision.py
src/app/: .env  config.py  database.py  main.py  models.py  routes.py
src/app/chat/: chat.py
src/app/orm/: base.py  notes_crud.py  notes_schemas.py  orm.py  users_crud.py  users_orm.py  users_schemas.py
src/app/routes/: notes_routes.py  users_routes.py
templates/: chat.html
tests/: conftest.py  test_notes.py
